src/objects/Leap_Field_Mapping__mdt/Leap_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Leap Field Mapping</label>
    <pluralLabel>Leap Field Mappings</pluralLabel>
</CustomObject>