src/objects/Leap_Field_Mapping__mdt/fields/Data_type__c.field-meta.xml
<CustomField>
    <fullName>Data_type__c</fullName>
    <label>Data type</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>