src/objects/Leap_Field_Mapping__mdt/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <label>Field Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>