src/objects/Leap_Field_Mapping__mdt/fields/JSON_String__c.field-meta.xml
<CustomField>
    <fullName>JSON_String__c</fullName>
    <label>JSON String</label>
    <length>50</length>
    <type>Text</type>
</CustomField>