src/objects/Leap_Field_Mapping__mdt/fields/LinkedField__c.field-meta.xml
<CustomField>
    <fullName>LinkedField__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LinkedField</label>
    <type>Checkbox</type>
</CustomField>