src/objects/Leap_Field_Mapping__mdt/fields/Receiver__c.field-meta.xml
<CustomField>
    <fullName>Receiver__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receiver</label>
    <type>Checkbox</type>
</CustomField>