src/objects/Leap_Field_Mapping__mdt/fields/Sales_Contract__c.field-meta.xml
<CustomField>
    <fullName>Sales_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Contract</label>
    <type>Checkbox</type>
</CustomField>