src/objects/Leap_Field_Mapping__mdt/fields/ServiceContract__c.field-meta.xml
<CustomField>
    <fullName>ServiceContract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ServiceContract</label>
    <type>Checkbox</type>
</CustomField>