src/objects/Leap_Field_Mapping__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Value</label>
    <length>25</length>
    <type>Text</type>
</CustomField>